--- a/main.html
+++ b/main.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My First Webpage</title>
 </head>
 <body>
-	<h1>Welcome to My first Webpage!</h1>
-	<p>This is a paragraph.</p>
-
+	<h2>Acciojob</h2>
 </body>
 </html>
